
[metadata]
name = loginserver
version = 1.1.4
summary = 'auth login sshd server with password or public_key'
home-page = 'https://github.com/windskyer/loginserver'
author = 'zwei'
author-email = 'suifeng20@hotmail.com
license = 'LGPL'
description-file = 
    README.md
platform = ''
classifier = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    loginserver

console_scripts = 
    loginsever = loginserver.cmd.login

data_files =
    etc/loginserver.conf = etc/loginserver.conf

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
